# fish_regressor

./: Dockerfile  fish_regression.ipynb  pyproject.toml  requirements.txt  weight_pred.pkl  weight_predict.ipynb
src/fr/: cli.py  main.py
src/fr/api/: .weightpd.py.swp  fishclass.py  weightpd.py
